manifests/voting-app/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1  # Typically only one worker
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: adedoyinsoye/voting-app-worker:latest  # Docker Hub image
        ports:
        - containerPort: 80
