manifests/voting-app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
spec:
  replicas: 3  # High availability with 3 replicas
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: adedoyinsoye/voting-app-backend:latest  # Docker Hub image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  type: LoadBalancer  # Expose externally using LoadBalancer
  selector:
    app: result
  ports:
  - protocol: TCP
    port: 5001  # External port
    targetPort: 80  # Internal container port
