manifests/voting-app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
spec:
  replicas: 3  # High availability with 3 replicas
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: adedoyinsoye/voting-app-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  type: LoadBalancer  # Expose externally using LoadBalancer
  selector:
    app: vote
  ports:
  - protocol: TCP
    port: 5000  # External port
    targetPort: 80  # Internal container port
