manifests/voting-app/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vote.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service  # Voting App Frontend service name
            port:
              number: 5000
  - host: results.busyqa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service  # Result App Backend service name
            port:
              number: 5001
